# purrmint

./: .gitignore  Cargo.toml  LICENSE  README.md  build-android-16k.sh  build-android-pixel8.sh  build-android-universal.sh  build-android.sh  build.rs  cbindgen.toml  quick-start.sh
examples/: client_demo.rs  demo.rs  local_mint_tor_test.rs  persistent_mint_tor_service.rs  send_request.rs
purrmint-android/: .gitignore  build-app.sh  gradle.properties  run-android.sh  settings.gradle  setup-gradle.sh
purrmint-android/app/: build.gradle
purrmint-android/app/src/main/: AndroidManifest.xml
purrmint-android/app/src/main/cpp/: CMakeLists.txt  purrmint.h  purrmint_jni.cpp
purrmint-android/app/src/main/java/com/example/purrmint/: ConfigurationActivity.kt  LogEntry.kt  LoginActivity.kt  LogsAdapter.kt  MainActivity.kt  NostrAccount.kt  PurrmintManager.kt  PurrmintNative.kt  PurrmintService.kt  ServiceMode.kt
purrmint-android/app/src/main/java/com/purrmint/app/: AccountActivity.kt  ConfigActivity.kt  ConfigManager.kt  LoginActivity.kt  LoginManager.kt  MainActivity.kt  MainPagerAdapter.kt  MintStatusFragment.kt  PurrmintApplication.kt  PurrmintManager.kt  PurrmintNative.kt  PurrmintService.kt  ServiceLogsFragment.kt  ServiceMode.kt
purrmint-android/app/src/main/java/com/purrmint/app/core/managers/: ConfigManager.kt  LanguageManager.kt  LoginManager.kt  PurrmintManager.kt
purrmint-android/app/src/main/java/com/purrmint/app/core/native/: PurrmintNative.kt
purrmint-android/app/src/main/java/com/purrmint/app/core/services/: PurrmintService.kt
purrmint-android/app/src/main/java/com/purrmint/app/fragments/: BaseFragment.kt
purrmint-android/app/src/main/java/com/purrmint/app/ui/activities/: AccountActivity.kt  ConfigActivity.kt  LanguageSettingsActivity.kt  LoginActivity.kt  MainActivity.kt  SettingsActivity.kt
purrmint-android/app/src/main/java/com/purrmint/app/ui/adapters/: MainPagerAdapter.kt
purrmint-android/app/src/main/java/com/purrmint/app/ui/fragments/: BaseFragment.kt  MintStatusFragment.kt  ServiceLogsFragment.kt
purrmint-android/app/src/main/res/drawable/: button_background.xml  button_outline_background.xml  card_background.xml  ic_account.xml  ic_account_add.xml  ic_add.xml  ic_close.xml  ic_config.xml  ic_control.xml  ic_copy.xml  ic_launcher_foreground.xml  ic_lightning.xml  ic_link.xml  ic_login.xml  ic_logout.xml  ic_play.xml  ic_settings.xml  ic_status.xml  ic_status_online.xml  ic_stop.xml  primary_background.xml  rounded_background.xml
purrmint-android/app/src/main/res/layout/: activity_account.xml  activity_config.xml  activity_configuration.xml  activity_language_settings.xml  activity_login.xml  activity_main.xml  fragment_mint_status.xml  fragment_server_control.xml  fragment_server_logs.xml  fragment_service_logs.xml  fragment_user_info.xml  item_language.xml  item_log.xml  nav_header.xml
purrmint-android/app/src/main/res/menu/: bottom_nav_menu.xml  drawer_menu.xml  main_menu.xml
purrmint-android/app/src/main/res/mipmap-xhdpi/: ic_launcher.xml  ic_launcher_round.xml
purrmint-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
purrmint-android/app/src/main/res/values-ja/: strings.xml
purrmint-android/app/src/main/res/values-pt/: strings.xml
purrmint-android/app/src/main/res/values-zh/: strings.xml
purrmint-android/app/src/main/res/xml/: network_security_config.xml
src/: config.rs  core.rs  ffi.rs  helpers.rs  jni.rs  lib.rs  lightning.rs  mintd_integration.rs  mintd_jni.rs  mintd_service.rs  nip74_service.rs  nostr.rs  service.rs  tor_service.rs  types.rs
src/handler/: default.rs  mod.rs
test/: Makefile  test.c
