[package]
name = "purrmint"
version = "0.1.0"
edition = "2021"
authors = ["PurrMint Developers"]
description = "High-level Cashu NIP-74 mint service suitable for Android (via JNI)"
license = "MIT"
repository = "https://github.com/purrmint/purrmint"
keywords = ["cashu", "nostr", "nip74", "mint", "lightning"]
categories = ["api-bindings", "cryptography", "network-programming"]

[lib]
name = "purrmint"
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.29"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
futures = "0.3"

nostr = { path = "../nostr/crates/nostr", features = ["std", "nip44"] }
nostr-sdk = { path = "../nostr/crates/nostr-sdk" }
nostr-connect = { path = "../nostr/crates/nostr-connect" }

cdk = { path = "../cdk/crates/cdk", features = ["mint"] }
cdk-sqlite = { path = "../cdk/crates/cdk-sqlite", features = ["mint"] }
cdk-common = { path = "../cdk/crates/cdk-common" }
cdk-fake-wallet = { path = "../cdk/crates/cdk-fake-wallet" }
cdk-axum = { path = "../cdk/crates/cdk-axum" }

# HTTP server dependencies - use compatible versions with cdk
axum = "0.8.1"
tower = "0.5"
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full", "cors", "trace"] }

# BIP39 for mnemonic handling
bip39 = { version = "2.0", features = ["rand"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
base32 = "0.5.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }

# Logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4"

rand = "0.9.1"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
once_cell = "1.20.2"
jni = "0.21"

[features]
default = ["jni-support"]
jni-support = []

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1" 
