[package]
name = "purrmint"
version = "0.0.1"
edition = "2025"
authors = ["heatherm"]
description = "Mobile Cashu mint service suitable for Android (via JNI)"
license = "MIT"
repository = "https://github.com/purrmint/purrmint"
keywords = ["cashu", "nostr", "nip74", "mint", "lightning"]
categories = ["api-bindings", "cryptography", "network-programming"]

[lib]
name = "purrmint"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
futures = "0.3"

nostr = { version = "0.42", features = ["std", "nip44"] }
nostr-sdk = { version = "0.42" }
nostr-connect = { version = "0.42" }

cdk = { version = "0.11", features = ["mint"] }
cdk-sqlite = { version = "0.11", features = ["mint"] }
cdk-common = { version = "0.11" }
cdk-fake-wallet = { version = "0.11" }
cdk-lnbits = { version = "0.11" }
cdk-cln = { version = "0.11" }
cdk-axum = { version = "0.11" }

# HTTP server dependencies - use compatible versions with cdk
axum = "0.8.1"
tower = "0.5"
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full", "cors", "trace"] }

# BIP39 for mnemonic handling
bip39 = { version = "2.0", features = ["rand"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
base32 = "0.5.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }

# Logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4"

rand = "0.9.1"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
once_cell = "1.20.2"
jni = "0.21"

[features]
default = ["jni-support"]
jni-support = []

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1" 

[dev-dependencies]
tempfile = "3"
